tests/ui/missing_semicolon.stderr
error: expected `;` or `,`
 --> tests/ui/missing_semicolon.rs:5:9
  |
5 |         AndMore = ::std::hash::Hash, ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
  |         ^^^^^^^
